--- a/WinApp/WinApp/WinApp.csproj
+++ b/WinApp/WinApp/WinApp.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,6 +66,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuViewControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MenuViewControl.Designer.cs">
+      <DependentUpon>MenuViewControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MVC\Engine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,12 +90,19 @@
     </Compile>
     <Compile Include="Views\BaseView.cs" />
     <Compile Include="Views\Device\Default.cs" />
+    <Compile Include="Views\Device\UpdateStatus.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\Device\UpdateStatus.Designer.cs">
+      <DependentUpon>UpdateStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Home\LoginBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Views\Home\LoginBox.Designer.cs">
       <DependentUpon>LoginBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\MenuView.cs" />
     <Compile Include="Views\Wait.cs" />
     <Compile Include="Views\_controls\DeviceView.cs">
       <SubType>Component</SubType>
@@ -99,8 +113,14 @@
     <Compile Include="Views\_controls\Led.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Views\_controls\Menu.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuViewControl.resx">
+      <DependentUpon>MenuViewControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -117,9 +137,14 @@
     <EmbeddedResource Include="Views\Account\FormEdit.resx">
       <DependentUpon>FormEdit.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Device\UpdateStatus.resx">
+      <DependentUpon>UpdateStatus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Home\LoginBox.resx">
       <DependentUpon>LoginBox.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="data.json" />
+    <None Include="menuconfig.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
